test/Fail/Erasure-subtyping-4.agda
{-# OPTIONS --erasure #-}

f : {A B : Set} → (A → B) → @0 A → B
f g x = g x
