test/Fail/Erasure-subtyping-4.err
Erasure-subtyping-4.agda:4.11-12: error: [VariableIsErased]
Variable x is declared erased, so it cannot be used here
when checking that the expression x has type A
